tests/compile/fail/upcast.stderr
error[E0271]: type mismatch resolving `<dyn Trait2 as VTableRepr>::VTable == Trait1VTable`
  --> tests/compile/fail/upcast.rs:12:37
   |
12 |     let _: DynRef<dyn Trait2> = dynref.upcast();
   |                                        ^^^^^^ expected struct `Trait2VTable`, found struct `Trait1VTable`
